# travel-viewer

./: README.md  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: static.yml
example/: README.md  pyproject.toml
example/example/: main.py
src/: App.vue  models.d.ts  style.css
src/components/: SingleView.vue
